Twenty Twelve: clear center-aligned images properly. Fixes #23244.
git-svn-id: http://core.svn.wordpress.org/trunk@23428 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -893,6 +893,7 @@ img.alignright {
 	margin: 0.857142857rem 0 0.857142857rem 1.714285714rem;
 }
 img.aligncenter {
+	clear: both;
 	margin-top: 12px;
 	margin-top: 0.857142857rem;
 	margin-bottom: 12px;
